--- a/C#/JaggedArrayExamScores/JaggedArrayExamScores/JaggedArrayExamScores.csproj
+++ b/C#/JaggedArrayExamScores/JaggedArrayExamScores/JaggedArrayExamScores.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DAED3173-2216-449A-A717-A66605941FCF}</ProjectGuid>
+    <ProjectGuid>{785978F9-114C-4458-B5E9-0E0057BB28D1}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>JaggedArraysExamScores</RootNamespace>
-    <AssemblyName>JaggedArraysExamScores</AssemblyName>
+    <RootNamespace>JaggedArrayExamScores</RootNamespace>
+    <AssemblyName>JaggedArrayExamScores</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
